<resources>
    <string name="app_name">My Udacity App Portfolio</string>
    <string name="my_nanodegree_apps">My Udacity Nanodegree Apps !</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_it_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
